--- a/Knight-GUI-master/First_GUI/mainwindow.ui
+++ b/Knight-GUI-master/First_GUI/mainwindow.ui
@@ -111,34 +111,6 @@
      <string>Knight button</string>
     </property>
    </widget>
-   <widget class="QLabel" name="bishop">
-    <property name="geometry">
-     <rect>
-      <x>163</x>
-      <y>717</y>
-      <width>75</width>
-      <height>75</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>75</width>
-      <height>75</height>
-     </size>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="Resources.qrc">:/resources/img/Bishopaya.png</pixmap>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
@@ -184,6 +156,34 @@
      <pixmap resource="Resources.qrc">:/resources/img/pawnBlacks.png</pixmap>
     </property>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>720</y>
+      <width>75</width>
+      <height>75</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>75</width>
+      <height>75</height>
+     </size>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="Resources.qrc">:/resources/img/Bishopaya.png</pixmap>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -191,7 +191,7 @@
      <x>0</x>
      <y>0</y>
      <width>2000</width>
-     <height>26</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
