--- a/Knight-GUI-master/First_GUI/mainwindow.ui
+++ b/Knight-GUI-master/First_GUI/mainwindow.ui
@@ -160,7 +160,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>800</y>
+      <y>720</y>
       <width>75</width>
       <height>75</height>
      </rect>
@@ -182,6 +182,22 @@
     </property>
     <property name="pixmap">
      <pixmap resource="Resources.qrc">:/resources/img/Bishopaya.png</pixmap>
+    </property>
+   </widget>
+   <widget class="QLabel" name="no1">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>800</y>
+      <width>63</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="Resources.qrc">:/resources/no1.png</pixmap>
     </property>
    </widget>
   </widget>
