--- a/Knight-GUI-master/build-First_GUI-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/release/qmake_qmake_qm_files.qrc
+++ b/Knight-GUI-master/build-First_GUI-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/release/qmake_qmake_qm_files.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="i18n">
-<file alias="First_GUI_en_GB.qm">C:/Users/HP/source/repos/Knight-GUI-master/build-First_GUI-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/release/First_GUI_en_GB.qm</file>
+<file alias="First_GUI_en_GB.qm">D:/Junior-sem1/Data Structure/project/Knight-GUI-master/Knight-GUI-master/build-First_GUI-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/release/First_GUI_en_GB.qm</file>
 </qresource>
 </RCC>
