--- a/Knight-GUI-master/First_GUI/mainwindow.ui
+++ b/Knight-GUI-master/First_GUI/mainwindow.ui
@@ -35,25 +35,6 @@
    <enum>QTabWidget::Rounded</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="btn_Close">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>60</y>
-      <width>200</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Close Window</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="ChessBoard">
     <property name="geometry">
      <rect>
@@ -308,19 +289,19 @@
    <widget class="QPushButton" name="btn_addPwn">
     <property name="geometry">
      <rect>
-      <x>1140</x>
-      <y>380</y>
-      <width>191</width>
-      <height>41</height>
+      <x>1160</x>
+      <y>370</y>
+      <width>171</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>18</pointsize>
+      <pointsize>15</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Start</string>
+     <string>Add</string>
     </property>
    </widget>
   </widget>
@@ -339,22 +320,5 @@
  <resources>
   <include location="Resources.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>btn_Close</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>564</x>
-     <y>135</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>559</x>
-     <y>187</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
