--- a/Knight-GUI-master/First_GUI/debug/qmake_qmake_qm_files.qrc
+++ b/Knight-GUI-master/First_GUI/debug/qmake_qmake_qm_files.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="i18n">
-<file alias="First_GUI_en_GB.qm">E:/ASU5/Knight-GUI-master/Knight-GUI-master/Knight-GUI-master/First_GUI/debug/First_GUI_en_GB.qm</file>
+<file alias="First_GUI_en_GB.qm">D:/Junior-sem1/Data Structure/Final/Knight-GUI-master/Knight-GUI-master/First_GUI/debug/First_GUI_en_GB.qm</file>
 </qresource>
 </RCC>
